Third commit of prompt_engineering.ipynb

--- a/prompt_engineering.ipynb
+++ b/prompt_engineering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1d68119b",
+   "id": "f3789c17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7abbf3f3",
+   "metadata": {},
+   "source": [
+    "# Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e219482f",
+   "id": "4adac9e2",
    "metadata": {},
    "outputs": [
     {
@@ -79,17 +87,16 @@
     }
    ],
    "source": [
-    "# Load dataset\n",
     "data_path = 'cleaned_cyberbullying_tweets.csv'\n",
     "df = pd.read_csv(data_path)\n",
     "\n",
-    "# Validate that necessary columns exist\n",
     "if 'sentiment' not in df.columns or 'text_clean' not in df.columns:\n",
     "    raise ValueError(\"Required columns are missing from the DataFrame.\")\n",
     "\n",
     "print(\"Initial data size:\", df.shape)\n",
     "print(df.head())\n",
     "\n",
+    "#Prompt\n",
     "def add_prompt_to_text(text):\n",
     "    return f\"Please classify the label of this text as either 0, 1, or 2. 0 represents the sentiment 'not_cyberbullying', 1 represents the sentiment 'other_cyberbullying', 2 represents the sentiments ethnicity, religion, gender, or other. 0 is negative, 1 is neutral, and 2 is positive for cyberbullying: {text}\"\n",
     "\n",
@@ -97,7 +104,6 @@
     "df['text_clean'] = df['text_clean'].apply(add_prompt_to_text)\n",
     "\n",
     "\n",
-    "# Display unique sentiment values before mapping\n",
     "print(\"Unique sentiment values before mapping:\", df['sentiment'].unique())\n",
     "\n",
     "# Mapping sentiments to labels\n",
@@ -112,30 +118,24 @@
     "\n",
     "df['label'] = df['sentiment'].map(sentiment_mapping)\n",
     "\n",
-    "# Check for NaN values after mapping\n",
     "if df['label'].isna().any():\n",
     "    print(\"NaN values found after mapping. Check mapping keys and sentiment column values.\")\n",
     "    print(df[df['label'].isna()])\n",
     "else:\n",
     "    print(\"No NaN values after mapping.\")\n",
     "\n",
-    "# Drop rows with NaN labels\n",
     "df = df.dropna(subset=['label'])\n",
     "print(\"Data size after dropping NaNs:\", df.shape)\n",
     "\n",
-    "# Check if DataFrame is empty\n",
     "if df.empty:\n",
     "    print(\"DataFrame is empty after dropping NaNs. Adjust data cleaning or check data quality.\")\n",
     "else:\n",
     "    print(\"Data is ready for further processing.\")\n",
     "\n",
-    "# Convert label column to integer\n",
     "df['label'] = df['label'].astype(int)\n",
     "\n",
-    "# Display new label distribution\n",
     "print(\"Distribution of labels:\", df['label'].value_counts())\n",
     "\n",
-    "# Split dataset into train and validation sets\n",
     "texts = df['text_clean'].tolist()\n",
     "labels = df['label'].tolist()\n",
     "\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ffc783da",
+   "id": "1932be4f",
    "metadata": {},
    "outputs": [
     {
@@ -163,22 +163,17 @@
     "from imblearn.pipeline import Pipeline\n",
     "import numpy as np\n",
     "\n",
-    "# Ensure train_texts is a numpy array for proper indexing later\n",
     "train_texts = np.array(train_texts)\n",
     "train_labels = np.array(train_labels)\n",
     "\n",
-    "# Convert train_labels to a pandas Series to use value_counts\n",
     "train_labels_series = pd.Series(train_labels)\n",
     "\n",
-    "# Get class counts\n",
     "class_counts = train_labels_series.value_counts()\n",
     "max_samples = class_counts.max()\n",
     "\n",
-    "# Define sampling strategy for multi-class\n",
     "sampling_strategy_over = {k: max_samples for k in class_counts.index}\n",
     "sampling_strategy_under = {k: max_samples for k in class_counts.index}\n",
     "\n",
-    "# Define the resampling strategy\n",
     "over = SMOTE(sampling_strategy=sampling_strategy_over)\n",
     "under = RandomUnderSampler(sampling_strategy=sampling_strategy_under)\n",
     "steps = [('over', over), ('under', under)]\n",
@@ -188,7 +183,6 @@
     "indices = np.arange(train_texts.shape[0]).reshape(-1, 1)\n",
     "resampled_indices, resampled_labels = pipeline.fit_resample(indices, train_labels_series)\n",
     "\n",
-    "# Select texts based on resampled indices using numpy indexing\n",
     "train_texts_resampled = train_texts[resampled_indices.flatten()]\n",
     "train_labels_resampled = train_labels[resampled_indices.flatten()]\n",
     "\n",
@@ -196,7 +190,6 @@
     "model = AutoModelForSequenceClassification.from_pretrained(\"cardiffnlp/twitter-roberta-base-sentiment\")\n",
     "\n",
     "def tokenize_data(texts, tokenizer):\n",
-    "    # Ensure all texts are strings and not None\n",
     "    texts = [str(text) for text in texts if text is not None]\n",
     "    return tokenizer(texts, padding=True, truncation=True, max_length=128, return_tensors=\"pt\")\n",
     "\n",
@@ -213,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9cb700e9",
+   "id": "c979e90a",
    "metadata": {},
    "outputs": [
     {
@@ -280,9 +273,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b82d19df",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "24950309",
+   "id": "ed504686",
    "metadata": {},
    "outputs": [
     {
@@ -402,9 +403,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ef0706e",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3508463a",
+   "id": "e3d4ec0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "aeca095c",
+   "id": "4323cec9",
    "metadata": {},
    "outputs": [
     {
